<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".views.activities.FatimasMentionsActivity">

    <TextView
        android:id="@+id/fatimasMentionsActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standardMargin"
        android:text="@string/fatimasMention"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="@dimen/titleFontSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.hookedonplay.decoviewlib.DecoView
        android:id="@+id/fatimasMentionsDecoView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/decoViewMargin"
        android:layout_marginEnd="@dimen/decoViewMargin"
        android:contentDescription="@string/tap_zone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40" />

    <TextView
        android:id="@+id/fatimasMentionsMentionText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:paddingStart="@dimen/standardMargin"
        android:paddingEnd="@dimen/standardMargin"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="@dimen/mentionFontSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/fatimasMentionsDecoView"
        app:layout_constraintEnd_toEndOf="@+id/fatimasMentionsDecoView"
        app:layout_constraintStart_toStartOf="@+id/fatimasMentionsDecoView"
        app:layout_constraintTop_toTopOf="@+id/fatimasMentionsDecoView"
        tools:text="اللهم صل علی محمد و آل محمد" />

    <TextView
        android:id="@+id/fatimasMentionsAllahuAkbarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/separateMargin"
        android:text="@string/allahuAkbarText"
        android:textColor="@color/grey"
        android:textSize="@dimen/detailFontSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fatimasMentionsAllahuAkbarValue"
        app:layout_constraintTop_toBottomOf="@+id/fatimasMentionsDecoView" />

    <TextView
        android:id="@+id/fatimasMentionsAllahuAkbarValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space"
        android:text="@string/_34"
        android:textColor="@color/grey"
        android:textSize="@dimen/detailFontSize"
        app:layout_constraintBottom_toBottomOf="@+id/fatimasMentionsAllahuAkbarText"
        app:layout_constraintEnd_toStartOf="@+id/fatimasMentionsAllahuAkbarText"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fatimasMentionsAllahuAkbarText" />

    <TextView
        android:id="@+id/fatimasMentionsAlhamdulillahText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/halfMargin"
        android:text="@string/alhamdulillahText"
        android:textColor="@color/grey"
        android:textSize="@dimen/detailFontSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fatimasMentionsAlhamdulillahValue"
        app:layout_constraintTop_toBottomOf="@+id/fatimasMentionsAllahuAkbarText" />

    <TextView
        android:id="@+id/fatimasMentionsAlhamdulillahValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space"
        android:text="@string/_33"
        android:textColor="@color/grey"
        android:textSize="@dimen/detailFontSize"
        app:layout_constraintBottom_toBottomOf="@+id/fatimasMentionsAlhamdulillahText"
        app:layout_constraintEnd_toStartOf="@+id/fatimasMentionsAlhamdulillahText"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fatimasMentionsAlhamdulillahText" />

    <TextView
        android:id="@+id/fatimasMentionsSubhanallahText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/halfMargin"
        android:text="@string/subhanAllahText"
        android:textColor="@color/grey"
        android:textSize="@dimen/detailFontSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fatimasMentionsSubhanallahValue"
        app:layout_constraintTop_toBottomOf="@+id/fatimasMentionsAlhamdulillahText" />

    <TextView
        android:id="@+id/fatimasMentionsSubhanallahValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space"
        android:text="@string/_33"
        android:textColor="@color/grey"
        android:textSize="@dimen/detailFontSize"
        app:layout_constraintBottom_toBottomOf="@+id/fatimasMentionsSubhanallahText"
        app:layout_constraintEnd_toStartOf="@+id/fatimasMentionsSubhanallahText"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fatimasMentionsSubhanallahText" />

    <ImageView
        android:id="@+id/fatimasMentionsSettingButton"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:contentDescription="@string/setting_button"
        android:padding="@dimen/standardMargin"
        android:src="@drawable/navy_blue_gear_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fatimasMentionsBackButton"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:contentDescription="@string/backButton"
        android:padding="@dimen/standardMargin"
        android:src="@drawable/navy_blue_back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fatimasMentionsRestartCounter"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:layout_marginEnd="@dimen/separateMargin"
        android:layout_marginBottom="@dimen/separateMargin"
        android:background="@drawable/navy_blue_circle"
        android:contentDescription="@string/edit"
        android:elevation="@dimen/shadowSize"
        android:padding="@dimen/standardMargin"
        android:src="@drawable/refresh_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>