<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".views.activities.WelcomeActivity">

    <Button
        android:id="@+id/dailyMentionsButton"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standardMargin"
        android:layout_marginTop="@dimen/standardMargin"
        android:layout_marginEnd="@dimen/standardMargin"
        android:background="@drawable/yellow_button"
        android:elevation="@dimen/shadowSize"
        android:paddingTop="@dimen/standardMargin"
        android:paddingBottom="@dimen/standardMargin"
        android:text="@string/dailyMentions"
        android:textColor="@android:color/white"
        android:textSize="@dimen/menuFontSize"
        app:layout_constraintBottom_toTopOf="@+id/salawatCounterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:background="@android:color/black"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/salawatCounterButton"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standardMargin"
        android:layout_marginTop="@dimen/standardMargin"
        android:layout_marginEnd="@dimen/standardMargin"
        android:background="@drawable/green_button"
        android:elevation="@dimen/shadowSize"
        android:paddingTop="@dimen/standardMargin"
        android:paddingBottom="@dimen/standardMargin"
        android:text="@string/salawatCounter"
        android:textColor="@android:color/white"
        android:textSize="@dimen/menuFontSize"
        app:layout_constraintBottom_toTopOf="@+id/fatimasMentionsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailyMentionsButton"
        tools:background="@android:color/black"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/fatimasMentionsButton"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standardMargin"
        android:layout_marginTop="@dimen/standardMargin"
        android:layout_marginEnd="@dimen/standardMargin"
        android:background="@drawable/navy_blue_button"
        android:elevation="@dimen/shadowSize"
        android:paddingTop="@dimen/standardMargin"
        android:paddingBottom="@dimen/standardMargin"
        android:text="@string/fatimasMention"
        android:textColor="@android:color/white"
        android:textSize="@dimen/menuFontSize"
        app:layout_constraintBottom_toTopOf="@+id/chosenMentionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salawatCounterButton"
        tools:background="@android:color/black"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/chosenMentionButton"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standardMargin"
        android:layout_marginTop="@dimen/standardMargin"
        android:layout_marginEnd="@dimen/standardMargin"
        android:background="@drawable/red_button"
        android:elevation="@dimen/shadowSize"
        android:paddingTop="@dimen/standardMargin"
        android:paddingBottom="@dimen/standardMargin"
        android:text="@string/chosenMention"
        android:textColor="@android:color/white"
        android:textSize="@dimen/menuFontSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fatimasMentionsButton"
        tools:background="@android:color/black"
        tools:targetApi="lollipop" />

    <ImageView
        android:id="@+id/settingButton"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:contentDescription="@string/setting_button"
        android:elevation="@dimen/shadowSize"
        android:padding="@dimen/standardMargin"
        android:src="@drawable/dark_red_gear_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>