<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:layoutDirection="ltr"
    app:cardBackgroundColor="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/dialogSalawatCounterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standardMargin"
            android:layout_marginTop="@dimen/standardMargin"
            android:layout_marginEnd="@dimen/standardMargin"
            android:text="@string/salawatDialogText"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dialogFontSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/dialogSalawatCounterEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standardMargin"
            android:layout_marginTop="@dimen/halfMargin"
            android:layout_marginEnd="@dimen/standardMargin"
            android:backgroundTint="@color/green"
            android:ems="10"
            android:hint="@string/salawatCount"
            android:inputType="number"
            android:textAlignment="center"
            android:textColorHighlight="@color/green30"
            android:textSize="@dimen/detailFontSize"
            android:theme="@style/greenCursorStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogSalawatCounterTitle"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/dialogSalawatCounterSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standardMargin"
            android:layout_marginTop="@dimen/halfMargin"
            android:layout_marginEnd="@dimen/standardMargin"
            android:layout_marginBottom="@dimen/standardMargin"
            android:background="@drawable/green_button"
            android:paddingStart="@dimen/separateMargin"
            android:paddingTop="@dimen/space"
            android:paddingEnd="@dimen/separateMargin"
            android:paddingBottom="@dimen/space"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dialogFontSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogSalawatCounterEditText" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>